2011-06-22  Murray Cumming  <murrayc@murrayc.com>

	Remove the User Level menu and the User Level label.

	* glom/glom.glade: Main window: Remove the User Level label.
	* glom/application.[h|cc]:
	* glom/frame_glom.[h|cc]: Remove the User Level menu, moving 
	its two radio menu items to the top of the Developer menu.
	init_menus(), update_table_sensitive_ui(): Make sure that all
	developer items are deactivated in operator mode, now that 
	we don't just deactivate the whole developer menu.

2011-06-22  Murray Cumming  <murrayc@murrayc.com>

	Main window: Simplify widgets at top.

	* glom/glom.glade:
	* glom/frame_glom.[h|cc]: Remove the Table: label. Make the 
	table name normal sized, but still bold. Remove the mode 
	labels, because there are only two modes now, and it should 
	be obvious when you are in the middle of entering find criteria.

2011-06-22  Murray Cumming  <murrayc@murrayc.com>

	glom.glade: Resave with glade.

	* glom/glom.glade: Resave with glade 3.10, which changes 
	object IDs to be unique across the whole file.
	Chose human-readable IDs instead of number suffixes.
	* glom/navigation/box_tables.cc:
	* glom/frame_glom.cc: Adapted the code.
	This is rather tedious and just makes code less readable.

2011-06-22  Murray Cumming  <murrayc@murrayc.com>

	glom.glade: Reorder top-levels alphabetically.

	* glom/glom.glade: Glade now does this when saving,
	so this will make it easier to see what else Glade 
	has changed.

1.19.5:

2011-06-21  Murray Cumming  <murrayc@murrayc.com>

	Require the latest libgdamm, for the GdaNull changes.

	* configure.ac: Require libgdamm 4.99.3

2011-06-17  Murray Cumming  <murrayc@murrayc.com>

  Fix the tests after the libgdamm Null Value change.
  
	* tests/python/test_python_execute_script.cc:
  Do not try to instantiate a static Value instance because the constructor 
  now needs the GType system to be initialized.

2011-06-17  Murray Cumming  <murrayc@murrayc.com>

	Details: Make Primary Key ID values visible again.