@@ -1603,31 +1603,6 @@ The data in the field was not recognized. Please try to correct the data or reve
             <property name="border_width">12</property>
             <property name="spacing">6</property>
             <child>
-              <object class="GtkHBox" id="hbox_header">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="spacing">6</property>
-                <child>
-                  <object class="GtkLabel" id="label_table_name_main">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="label" translatable="yes">&lt;b&gt;No Table Selected&lt;/b&gt;</property>
-                    <property name="use_markup">True</property>
-                  </object>
-                  <packing>
-                    <property name="expand">False</property>
-                    <property name="fill">False</property>
-                    <property name="position">1</property>
-                  </packing>
-                </child>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-                <property name="position">0</property>
-              </packing>
-            </child>
-            <child>
               <object class="GtkVBox" id="vbox_quickfind">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
